--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "Vishnu Satheesh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2",
     "pug": "^3.0.2"
   }
 }
