--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Vishnu Satheesh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
     "pug": "^3.0.2"
