--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
+    "multer": "^1.4.2",
     "pug": "^3.0.2"
   }
 }
