--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
     "multer": "^1.4.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^2.3.0"
   }
 }
