--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.36.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.2",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pug": "^3.0.2",
     "socket.io": "^2.3.0"
   }
