--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Vishnu Satheesh",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.36.1",
